Complete rewrite of the add-on. Version 2.0-rc1
- Now class-based and cleaner code
- Combined html_template and settings_form
- Now able to translate MODX Manager lexicon (MODX Setup coming)
- Replaced most snippet parameters, read docs!

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-TransleX - 1.0
+TransleX - 2.0
 ==============
 First Released: April 21st, 2012
-Author: Joe Molloy <http://www.hyper-typer.com>
+Author: Joe Molloy <http://www.hyper-typer.com> and Joakim Nyman <joakim@fractalwolfe.com>
 License: GNU GPLv2 (or later at your option)
 
 This addon is a translation tool, enabling developers and site administrators to give users (annonymous or registered)
